fix(security): corrects the role of users